--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,8 @@ vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", default-features 
 vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git" } 
 winit = { git = "https://github.com/rust-windowing/winit.git", default-features = true  }
 glam = { git = "https://github.com/bitshifter/glam-rs" }
+cgmath = { git = "https://github.com/rustgd/cgmath.git" }
 rand = { git = "https://github.com/rust-random/rand.git" }
 
-#rand = { git = "https://github.com/rust-random/rand.git" }
-#cgmath = { git = "https://github.com/rustgd/cgmath.git" }
 #serde = { git = "https://github.com/serde-rs/serde.git" , features = ["derive"] }
 #vulkano-util = { git = "https://github.com/vulkano-rs/vulkano.git" }
